@@ -1,3 +1,8 @@
+2012-02-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* window.py, gfeedline.glade: Added a menu item of 'All Tabs to the
+	  Bottom'.
+
 2012-02-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* liststore.py, window.py: Enabled to toggle multi-column mode.
